# WebAvancado/api/public/swagger.json
@@ -48,11 +48,19 @@
 						"application/json": {
 							"schema": {
 								"properties": {
+									"password": {
+										"type": "string"
+									},
+									"email": {
+										"type": "string"
+									},
 									"name": {
 										"type": "string"
 									}
 								},
 								"required": [
+									"password",
+									"email",
 									"name"
 								],
 								"type": "object"
@@ -150,66 +158,9 @@
 				]
 			}
 		},
-		"/api/user/getToppings": {
-			"get": {
-				"operationId": "AllToppings",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/JsonObject"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": []
-			}
-		},
-		"/api/user/fields": {
-			"get": {
-				"operationId": "Fields",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/JsonObject"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": []
-			}
-		},
-		"/api/user/query": {
-			"get": {
-				"operationId": "Query",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/JsonObject"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": []
-			}
-		},
 		"/api/kittyCat/create": {
 			"post": {
-				"operationId": "Create",
+				"operationId": "CreateCat",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -264,6 +215,94 @@
 						}
 					}
 				}
+			}
+		},
+		"/api/kittyCat/getAll": {
+			"get": {
+				"operationId": "AllCat",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/JsonObject"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/api/kittyCat/update": {
+			"patch": {
+				"operationId": "UpdateCat",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/JsonObject"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"name": {
+										"type": "string"
+									},
+									"id": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"name",
+									"id"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/kittyCat/delete/{id}": {
+			"delete": {
+				"operationId": "DeleteCat",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/JsonObject"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		}
 	},
